@@ -11,7 +11,9 @@ Developers: Please commit along with changes.
 For a complete change history, see the SVN log.
 
 
-Current Version (0.5.2-dev, SVN trunk):
+Current Version (0.6.0-dev, SVN trunk):
 ---------------------------------------
+
+- python/mapnik_map.cpp: Added ability to resize map and clear all layers and styles from python (r792)
 
 - load_map.cpp and save_map.cpp: Added xml serialization for abstract, title, minzoom, maxzoom, and queryable attributes (r787)
